--- a/greet-svc/pom.xml
+++ b/greet-svc/pom.xml
@@ -12,6 +12,7 @@
     <app-main-class>com.gm.services.greet.GreetServiceApplication</app-main-class>
     <otel-agent-enabled>true</otel-agent-enabled>
     <otel-metrics-exporter>otlp</otel-metrics-exporter>
+    <jib-skip>false</jib-skip>
   </properties>
   <dependencies>
     <dependency>
