--- a/configuration-svc/k8s/deployment.yaml
+++ b/configuration-svc/k8s/deployment.yaml
@@ -1,64 +1,54 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: greet-svc
+  name: configuration-svc
   labels:
-    app: greet-svc
+    app: configuration-svc
 spec:
   selector:
-    app: greet-svc
+    app: configuration-svc
   ports:
   - port: 8080
+    targetPort: 7575
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: greet-svc
+  name: configuration-svc
   labels:
-    app: greet-svc
+    app: configuration-svc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: greet-svc
+      app: configuration-svc
   template:
     metadata:
       labels:
-        app: greet-svc
+        app: configuration-svc
     spec:
       containers:
-      - name: greet-svc
-        image: registry.localhost:5001/greet-svc:latest
+      - name: configuration-svc
+        image: registry.localhost:5001/configuration-svc:latest
         imagePullPolicy: Always
         ports:
-          - containerPort: 8080
+        - containerPort: 7575
         readinessProbe:
           httpGet:
             path: /actuator/health/readiness
-            port: 8080
+            port: 7575
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
           httpGet:
             path: /actuator/health/liveness
-            port: 8080
+            port: 7575
           initialDelaySeconds: 5
           periodSeconds: 3
         startupProbe:
           httpGet:
             path: /actuator/health/readiness
-            port: 8080
+            port: 7575
           initialDelaySeconds: 5
           failureThreshold: 30
           periodSeconds: 10
-        env:
-        - name: CONFIG_URI
-          value: http://configuration-svc:8080
-        - name: SERVICE_REGISTRY_URI
-          value: http://service-registry-svc:8761
-        - name: NON_SECURE_PORT_ENABLED
-          value: "true"
-        - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: http://host.k3d.internal:4317
-        - name: SERVICE_INSTANCE_PREFER_IP
-          value: "true"
