--- a/gateway-svc/pom.xml
+++ b/gateway-svc/pom.xml
@@ -14,6 +14,7 @@
     <app-main-class>com.gm.services.gateway.GatewayApplication</app-main-class>
     <otel-agent-enabled>true</otel-agent-enabled>
     <otel-metrics-exporter>otlp</otel-metrics-exporter>
+    <jib-skip>false</jib-skip>
   </properties>
   <dependencies>
     <dependency>
