--- a/greet-svc/k8s/deployment.yaml
+++ b/greet-svc/k8s/deployment.yaml
@@ -1,53 +1,65 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: configuration-svc
+  name: greet-svc
   labels:
-    app: configuration-svc
+    app: greet-svc
 spec:
   selector:
-    app: configuration-svc
+    app: greet-svc
   ports:
   - port: 8080
+    targetPort: 8081
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: configuration-svc
+  name: greet-svc
   labels:
-    app: configuration-svc
+    app: greet-svc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: configuration-svc
+      app: greet-svc
   template:
     metadata:
       labels:
-        app: configuration-svc
+        app: greet-svc
     spec:
       containers:
-      - name: configuration-svc
-        image: registry.localhost:5001/configuration-svc:latest
+      - name: greet-svc
+        image: registry.localhost:5001/greet-svc:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 8080
+          - containerPort: 8081
         readinessProbe:
           httpGet:
             path: /actuator/health/readiness
-            port: 8080
+            port: 8081
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
           httpGet:
             path: /actuator/health/liveness
-            port: 8080
+            port: 8081
           initialDelaySeconds: 5
           periodSeconds: 3
         startupProbe:
           httpGet:
             path: /actuator/health/readiness
-            port: 8080
+            port: 8081
           initialDelaySeconds: 5
           failureThreshold: 30
           periodSeconds: 10
+        env:
+        - name: CONFIG_URI
+          value: http://configuration-svc:8080
+        - name: SERVICE_REGISTRY_URI
+          value: http://service-registry-svc:8761
+        - name: NON_SECURE_PORT_ENABLED
+          value: "true"
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://host.k3d.internal:4317
+        - name: SERVICE_INSTANCE_PREFER_IP
+          value: "true"
